package dev.craftlr.exercice2.model;

import java.util.List;

public class PokemonService {

    private static final int LAST_POKEMON_ID = 151;
    private static final int FIRST_POKEMON_ID = 1;

    List<Pokemon> pokemons = List.of(
            new Pokemon(0, "Glitch"),
            new Pokemon(1, "Bulbasaur", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(2, "Ivysaur", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(3, "Venusaur", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(4, "Charmander", PokemonType.FIRE),
            new Pokemon(5, "Charmeleon", PokemonType.FIRE),
            new Pokemon(6, "Charizard", PokemonType.FIRE, PokemonType.FLYING),
            new Pokemon(7, "Squirtle", PokemonType.WATER),
            new Pokemon(8, "Wartortle", PokemonType.WATER),
            new Pokemon(9, "Blastoise", PokemonType.WATER),
            new Pokemon(10, "Caterpie", PokemonType.BUG),
            new Pokemon(11, "Metapod", PokemonType.BUG),
            new Pokemon(12, "Butterfree", PokemonType.BUG, PokemonType.FLYING),
            new Pokemon(13, "Weedle", PokemonType.BUG, PokemonType.POISON),
            new Pokemon(14, "Kakuna", PokemonType.BUG, PokemonType.POISON),
            new Pokemon(15, "Beedrill", PokemonType.BUG, PokemonType.POISON),
            new Pokemon(16, "Pidgey", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(17, "Pidgeotto", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(18, "Pidgeot", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(19, "Rattata", PokemonType.NORMAL),
            new Pokemon(20, "Raticate", PokemonType.NORMAL),
            new Pokemon(21, "Spearow", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(22, "Fearow", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(23, "Ekans", PokemonType.POISON),
            new Pokemon(24, "Arbok", PokemonType.POISON),
            new Pokemon(25, "Pikachu", PokemonType.ELECTRIC),
            new Pokemon(26, "Raichu", PokemonType.ELECTRIC),
            new Pokemon(27, "Sandshrew", PokemonType.GROUND),
            new Pokemon(28, "Sandslash", PokemonType.GROUND),
            new Pokemon(29, "Nidoran♀", PokemonType.POISON),
            new Pokemon(30, "Nidorina", PokemonType.POISON),
            new Pokemon(31, "Nidoqueen", PokemonType.POISON, PokemonType.GROUND),
            new Pokemon(32, "Nidoran♂", PokemonType.POISON),
            new Pokemon(33, "Nidorino", PokemonType.POISON),
            new Pokemon(34, "Nidoking", PokemonType.POISON, PokemonType.GROUND),
            new Pokemon(35, "Clefairy", PokemonType.FAIRY),
            new Pokemon(36, "Clefable", PokemonType.FAIRY),
            new Pokemon(37, "Vulpix", PokemonType.FIRE),
            new Pokemon(38, "Ninetales", PokemonType.FIRE),
            new Pokemon(39, "Jigglypuff", PokemonType.NORMAL, PokemonType.FAIRY),
            new Pokemon(40, "Wigglytuff", PokemonType.NORMAL, PokemonType.FAIRY),
            new Pokemon(41, "Zubat", PokemonType.POISON, PokemonType.FLYING),
            new Pokemon(42, "Golbat", PokemonType.POISON, PokemonType.FLYING),
            new Pokemon(43, "Oddish", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(44, "Gloom", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(45, "Vileplume", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(46, "Paras", PokemonType.BUG, PokemonType.GRASS),
            new Pokemon(47, "Parasect", PokemonType.BUG, PokemonType.GRASS),
            new Pokemon(48, "Venonat", PokemonType.BUG, PokemonType.POISON),
            new Pokemon(49, "Venomoth", PokemonType.BUG, PokemonType.POISON),
            new Pokemon(50, "Diglett", PokemonType.GROUND),
            new Pokemon(51, "Dugtrio", PokemonType.GROUND),
            new Pokemon(52, "Meowth", PokemonType.NORMAL),
            new Pokemon(53, "Persian", PokemonType.NORMAL),
            new Pokemon(54, "Psyduck", PokemonType.WATER),
            new Pokemon(55, "Golduck", PokemonType.WATER),
            new Pokemon(56, "Mankey", PokemonType.FIGHTING),
            new Pokemon(57, "Primeape", PokemonType.FIGHTING),
            new Pokemon(58, "Growlithe", PokemonType.FIRE),
            new Pokemon(59, "Arcanine", PokemonType.FIRE),
            new Pokemon(60, "Poliwag", PokemonType.WATER),
            new Pokemon(61, "Poliwhirl", PokemonType.WATER),
            new Pokemon(62, "Poliwrath", PokemonType.WATER, PokemonType.FIGHTING),
            new Pokemon(63, "Abra", PokemonType.PSYCHIC),
            new Pokemon(64, "Kadabra", PokemonType.PSYCHIC),
            new Pokemon(65, "Alakazam", PokemonType.PSYCHIC),
            new Pokemon(66, "Machop", PokemonType.FIGHTING),
            new Pokemon(67, "Machoke", PokemonType.FIGHTING),
            new Pokemon(68, "Machamp", PokemonType.FIGHTING),
            new Pokemon(69, "Bellsprout", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(70, "Weepinbell", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(71, "Victreebel", PokemonType.GRASS, PokemonType.POISON),
            new Pokemon(72, "Tentacool", PokemonType.WATER, PokemonType.POISON),
            new Pokemon(73, "Tentacruel", PokemonType.WATER, PokemonType.POISON),
            new Pokemon(74, "Geodude", PokemonType.ROCK, PokemonType.GROUND),
            new Pokemon(75, "Graveler", PokemonType.ROCK, PokemonType.GROUND),
            new Pokemon(76, "Golem", PokemonType.ROCK, PokemonType.GROUND),
            new Pokemon(77, "Ponyta", PokemonType.FIRE),
            new Pokemon(78, "Rapidash", PokemonType.FIRE),
            new Pokemon(79, "Slowpoke", PokemonType.WATER, PokemonType.PSYCHIC),
            new Pokemon(80, "Slowbro", PokemonType.WATER, PokemonType.PSYCHIC),
            new Pokemon(81, "Magnemite", PokemonType.ELECTRIC, PokemonType.STEEL),
            new Pokemon(82, "Magneton", PokemonType.ELECTRIC, PokemonType.STEEL),
            new Pokemon(83, "Farfetch'd", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(84, "Doduo", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(85, "Dodrio", PokemonType.NORMAL, PokemonType.FLYING),
            new Pokemon(86, "Seel", PokemonType.WATER),
            new Pokemon(87, "Dewgong", PokemonType.WATER, PokemonType.ICE),
            new Pokemon(88, "Grimer", PokemonType.POISON),
            new Pokemon(89, "Muk", PokemonType.POISON),
            new Pokemon(90, "Shellder", PokemonType.WATER),
            new Pokemon(91, "Cloyster", PokemonType.WATER, PokemonType.ICE),
            new Pokemon(92, "Gastly", PokemonType.GHOST, PokemonType.POISON),
            new Pokemon(93, "Haunter", PokemonType.GHOST, PokemonType.POISON),
            new Pokemon(94, "Gengar", PokemonType.GHOST, PokemonType.POISON),
            new Pokemon(95, "Onix", PokemonType.ROCK, PokemonType.GROUND),
            new Pokemon(96, "Drowzee", PokemonType.PSYCHIC),
            new Pokemon(97, "Hypno", PokemonType.PSYCHIC),
            new Pokemon(98, "Krabby", PokemonType.WATER),
            new Pokemon(99, "Kingler", PokemonType.WATER),
            new Pokemon(100, "Voltorb", PokemonType.ELECTRIC),
            new Pokemon(101, "Electrode", PokemonType.ELECTRIC),
            new Pokemon(102, "Exeggcute", PokemonType.GRASS, PokemonType.PSYCHIC),
            new Pokemon(103, "Exeggutor", PokemonType.GRASS, PokemonType.PSYCHIC),
            new Pokemon(104, "Cubone", PokemonType.GROUND),
            new Pokemon(105, "Marowak", PokemonType.GROUND),
            new Pokemon(106, "Hitmonlee", PokemonType.FIGHTING),
            new Pokemon(107, "Hitmonchan", PokemonType.FIGHTING),
            new Pokemon(108, "Lickitung", PokemonType.NORMAL),
            new Pokemon(109, "Koffing", PokemonType.POISON),
            new Pokemon(110, "Weezing", PokemonType.POISON),
            new Pokemon(111, "Rhyhorn", PokemonType.GROUND, PokemonType.ROCK),
            new Pokemon(112, "Rhydon", PokemonType.GROUND, PokemonType.ROCK),
            new Pokemon(113, "Chansey", PokemonType.NORMAL),
            new Pokemon(114, "Tangela", PokemonType.GRASS),
            new Pokemon(115, "Kangaskhan", PokemonType.NORMAL),
            new Pokemon(116, "Horsea", PokemonType.WATER),
            new Pokemon(117, "Seadra", PokemonType.WATER),
            new Pokemon(118, "Goldeen", PokemonType.WATER),
            new Pokemon(119, "Seaking", PokemonType.WATER),
            new Pokemon(120, "Staryu", PokemonType.WATER),
            new Pokemon(121, "Starmie", PokemonType.WATER, PokemonType.PSYCHIC),
            new Pokemon(122, "Mr. Mime", PokemonType.PSYCHIC, PokemonType.FAIRY),
            new Pokemon(123, "Scyther", PokemonType.BUG, PokemonType.FLYING),
            new Pokemon(124, "Jynx", PokemonType.ICE, PokemonType.PSYCHIC),
            new Pokemon(125, "Electabuzz", PokemonType.ELECTRIC),
            new Pokemon(126, "Magmar", PokemonType.FIRE),
            new Pokemon(127, "Pinsir", PokemonType.BUG),
            new Pokemon(128, "Tauros", PokemonType.NORMAL),
            new Pokemon(129, "Magikarp", PokemonType.WATER),
            new Pokemon(130, "Gyarados", PokemonType.WATER, PokemonType.FLYING),
            new Pokemon(131, "Lapras", PokemonType.WATER, PokemonType.ICE),
            new Pokemon(132, "Ditto", PokemonType.NORMAL),
            new Pokemon(133, "Eevee", PokemonType.NORMAL),
            new Pokemon(134, "Vaporeon", PokemonType.WATER),
            new Pokemon(135, "Jolteon", PokemonType.ELECTRIC),
            new Pokemon(136, "Flareon", PokemonType.FIRE),
            new Pokemon(137, "Porygon", PokemonType.NORMAL),
            new Pokemon(138, "Omanyte", PokemonType.ROCK, PokemonType.WATER),
            new Pokemon(139, "Omastar", PokemonType.ROCK, PokemonType.WATER),
            new Pokemon(140, "Kabuto", PokemonType.ROCK, PokemonType.WATER),
            new Pokemon(141, "Kabutops", PokemonType.ROCK, PokemonType.WATER),
            new Pokemon(142, "Aerodactyl", PokemonType.ROCK, PokemonType.FLYING),
            new Pokemon(143, "Snorlax", PokemonType.NORMAL),
            new Pokemon(144, "Articuno", PokemonType.ICE, PokemonType.FLYING),
            new Pokemon(145, "Zapdos", PokemonType.ELECTRIC, PokemonType.FLYING),
            new Pokemon(146, "Moltres", PokemonType.FIRE, PokemonType.FLYING),
            new Pokemon(147, "Dratini", PokemonType.DRAGON),
            new Pokemon(148, "Dragonair", PokemonType.DRAGON),
            new Pokemon(149, "Dragonite", PokemonType.DRAGON, PokemonType.FLYING),
            new Pokemon(150, "Mewtwo", PokemonType.PSYCHIC),
            new Pokemon(151, "Mew", PokemonType.PSYCHIC));

    List<Pokemon> getPokemons() {
        return pokemons;
    }

    Pokemon getPokemonsById(int id) {
        if (id < FIRST_POKEMON_ID || id > LAST_POKEMON_ID)
            return pokemons.getFirst();
        return pokemons.get(id);
    }
}
