package dev.craftlr.exercice2.viewmodel;

import dev.craftlr.exercice2.model.PokemonService;

public class PokemonViewModel {

    public PokemonViewModel(PokemonService service) {
        // TODO Auto-generated constructor stub
    }

}
