@startuml exercice2
enum PokemonType{
    GRASS
    POISON
    FIRE
    WATER
    ELECTRIC
    PSYCHIC
    ICE
    DRAGON
    NORMAL
    FIGHTING
    FLYING
    GROUND
    ROCK
    BUG
    GHOST
    STEEL
    FAIRY
}

class Pokemon {
    - int id
    - String name
    - PokemonType type
    - String spriteURL
    + getId() : int
    + getName() : String
    + getTypes() : List<PokemonType>
    + getSpriteURL() : String
    + toString() : String
}

class PokemonService {
    + getPokemons() :  List<Pokemon>
    + getPokemonsById(int id) : Pokemon
}

class PokemonViewModel {
    - {static} List<Pokemon> allPokemons
    - {static} PokemonService service
    - Pokemon currentPokemon
    - StringProperty nameProperty
    - IntegerProperty idProperty
    - StringProperty typeProperty
    - update()
}

class PokemonView {
    + PokemonView(PokemonViewModel pvm)
    - update(ActionEvent evt)
}

PokemonService --> "*" Pokemon 

PokemonView -- PokemonViewModel : Bindings

PokemonViewModel -->"1" PokemonService

PokemonViewModel -- Pokemon

Pokemon --> "*" PokemonType : type
@enduml